# FETMOD

./: README.md  pyproject.toml
examples/: gaa_structure_generator.py  phonon_potential_comparison.py  quickstart.py
semicon_workflow/: __init__.py  calculators.py  config.py  elastic_properties.py  gaa_structure.py  mp_structures.py  phonon_properties.py  plotting.py  relax_lattice.py  thermal_conductivity_bte.py  thermal_expansion.py  workflow.py
tests/: test_semicon_workflow.py
